WMG112519/force-app/main/default/objects/Assignments__c/Assignments__c.object-meta.xml
<CustomObject>
    <label>Assignment</label>
    <nameField>
        <label>Assignments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>