WMG112519/force-app/main/default/objects/Assignments__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>