WMG112519/force-app/main/default/objects/Assignments__c/fields/Owner_UserID__c.field-meta.xml
<CustomField>
    <fullName>Owner_UserID__c</fullName>
    <formula>Owner__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner UserID</label>
    <type>Text</type>
</CustomField>