WMG112519/force-app/main/default/objects/Assignments__c/fields/Use_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Use_Zip_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Zip Code</label>
    <type>Checkbox</type>
</CustomField>