WMG112519/force-app/main/default/objects/Assignments__c/listViews/Assignments_by_States.listView-meta.xml
<ListView>
    <fullName>Assignments_by_States</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>Use_Zip_Code__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>Owner__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Assignments by States</label>
</ListView>