WMG112519/force-app/main/default/objects/Assignments__c/listViews/Single_State_Assignments.listView-meta.xml
<ListView>
    <fullName>Single_State_Assignments</fullName>
    <columns>State__c</columns>
    <columns>Owner__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Use_Zip_Code__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Single State Assignments</label>
    <language>en_US</language>
</ListView>